View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024672 | Open CASCADE | OCCT:Visualization | public | 2014-02-28 10:09 | 2015-04-07 12:36 |
Reporter | kgv | Assigned To | abv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0024672: Visualization - AIS_TexturedShape does not activate back face culling aspect | ||||
Description | AIS_TexturedShape manage back face culling property in way inconsistent to AIS_Shape. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
cull_tex.png (88,897 bytes) |
|
Patch is ready for review in CR24672 branch (based on CR24622_1). |
|
Dear Bugmaster, Branch CR24672_1 is reviewed and ready for testing. |
|
Dear BugMaster, Branch CR24672_1 (and products from GIT master) was compiled on Linux and Windows platforms. There is compilation error on Linux platform: http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24622_1/job/mnt-CR24622_1-master_build_occt_linux/1/parsed_console/? ../../../../src/QABugs/QABugs_19.cxx:1718: error: conversion from ‘BRepPrimAPI_MakeBox’ to ‘TopoDS_Shape’ is ambiguous |
|
Dear kgv, The branch was rebased on fresh CR24622_1 and pushed as CR24672_2. Please check and send this one to testing when you finish reviewing CR24622_1. |
|
Please test branch CR24672_2. |
|
Dear BugMaster, Branch CR24672_2 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 5b8cc5fee08c378d31107a3bb53f187412e54105 Number of compiler warnings: occt component : Linux: 29 (29 on master) Windows: 0 (0 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 383115756 / 382850156 Total CPU difference: 62257.44999999978 / 52926.71000000003 Testing on Windows: Total MEMORY difference: 429273972 / 428923596 Total CPU difference: 31353.28125 / 32992.875 There are following differences in images found by testdiff. http://occt-tests/CR24672-2-master-occt/Debian60-64/diff-Debian60-64.html http://occt-tests/CR24672-2-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html IMAGE bugs vis bug5988: bug5988_Driver1_Viewer1_View1.png differs IMAGE bugs vis bug23813: bug23813_Driver1_Viewer1_View1.png differs |
|
The problem is reproduced again |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-02-28 10:09 | kgv | New Issue | |
2014-02-28 10:09 | kgv | Assigned To | => san |
2014-02-28 10:09 | kgv | File Added: cull_tex.png | |
2014-02-28 10:10 | kgv | Assigned To | san => kgv |
2014-02-28 10:10 | kgv | Status | new => assigned |
2014-02-28 10:10 | kgv | Relationship added | related to 0024521 |
2014-02-28 12:30 | kgv | Note Added: 0028073 | |
2014-02-28 12:30 | kgv | Assigned To | kgv => apl |
2014-02-28 12:30 | kgv | Status | assigned => resolved |
2014-02-28 13:15 |
|
Note Added: 0028074 | |
2014-02-28 13:15 |
|
Assigned To | apl => bugmaster |
2014-02-28 13:15 |
|
Status | resolved => reviewed |
2014-02-28 18:33 |
|
Assigned To | bugmaster => mkv |
2014-03-03 13:00 |
|
Note Added: 0028087 | |
2014-03-03 13:00 |
|
Assigned To | mkv => kgv |
2014-03-03 13:00 |
|
Status | reviewed => assigned |
2014-03-03 16:50 |
|
Assigned To | kgv => apl |
2014-03-03 16:50 |
|
Note Added: 0028092 | |
2014-03-03 16:50 |
|
Assigned To | apl => kgv |
2014-03-03 16:50 |
|
Status | assigned => resolved |
2014-03-03 16:51 |
|
Note Edited: 0028092 | |
2014-03-03 17:00 | kgv | Note Added: 0028096 | |
2014-03-03 17:00 | kgv | Assigned To | kgv => bugmaster |
2014-03-03 17:00 | kgv | Status | resolved => reviewed |
2014-03-03 18:34 |
|
Assigned To | bugmaster => mkv |
2014-03-04 17:14 |
|
Note Added: 0028135 | |
2014-03-04 17:14 |
|
Test case number | => Not needed |
2014-03-04 17:14 |
|
Assigned To | mkv => bugmaster |
2014-03-04 17:14 |
|
Status | reviewed => tested |
2014-03-11 14:41 | abv | Changeset attached | => occt master 8e3ebc7a |
2014-03-11 14:41 | abv | Assigned To | bugmaster => abv |
2014-03-11 14:41 | abv | Status | tested => verified |
2014-03-11 14:41 | abv | Resolution | open => fixed |
2014-04-04 12:06 | abv | Target Version | 6.7.1 => 6.8.0 |
2014-11-11 12:47 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:51 |
|
Status | verified => closed |
2015-04-07 10:22 | abv | Note Added: 0039287 | |
2015-04-07 12:36 | kgv | Relationship added | related to 0026027 |