0024672: Visualization - AIS_TexturedShape does not activate back face culling aspect